--- a/compliance/templates/base_generic.html
+++ b/compliance/templates/base_generic.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="{% static 'DataTables/datatables.min.css' %}" />
     <link rel="stylesheet" href="{% static 'bootstrap-icons-1.13.1/bootstrap-icons.min.css' %}" />
     <style>
-        body {
-            zoom: 90%;
+        html {
+            font-size: 14px;
         }
     </style>
 
