--- a/compliance/templates/email_templates/task_reminder_email_template.html
+++ b/compliance/templates/email_templates/task_reminder_email_template.html
@@ -28,6 +28,9 @@
 </head>
 
 <body>
+    <p> Dear Sir / Madam,</p>
+
+    <p> The following task is still due for submission:</p>
 
     {% include "partials/email_task_table.html" with task=task %}
 
