--- a/compliance/templates/email_templates/task_email_bulk_creation.html
+++ b/compliance/templates/email_templates/task_email_bulk_creation.html
@@ -31,7 +31,8 @@
     <p>Dear Sir / Madam,</p>
 
     <p>
-        The following tasks were created on <strong>{{ date }}</strong>
+        The following task{{ tasks|length|pluralize }} {{ tasks|length|pluralize:"is,are" }} created today
+        (<strong>{{ date }}</strong>)
         for <strong>{{ department.department_name }}:</strong>
     </p>
 
