--- a/compliance/templates/email_templates/task_email_bulk_overdue.html
+++ b/compliance/templates/email_templates/task_email_bulk_overdue.html
@@ -31,7 +31,8 @@
     <p>Dear Sir / Madam,</p>
 
     <p>
-        The following tasks were due for submission on (<strong>{{ date }}</strong>)
+        The following task{{ tasks|length|pluralize }} {{ tasks|length|pluralize:"was,were" }} due for submission on
+        (<strong>{{ date }}</strong>)
         for <strong>{{ department.department_name }}:</strong>
     </p>
 
