--- a/compliance/templates/partials/revision_remarks_modal_form.html
+++ b/compliance/templates/partials/revision_remarks_modal_form.html
@@ -4,7 +4,12 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
 
-            <form method="post" action="{% url 'task_revise' task.pk %}">
+            {% if can_mark_as_pending %}
+            {% url 'task_pending' task.pk as form_action %}
+            {% elif can_request_revision %}
+            {% url 'task_revise' task.pk as form_action %}
+            {% endif %}
+            <form method="post" action="{{ form_action }}">
                 {% csrf_token %}
 
                 <div class="modal-header">
