Compliance: Add remarks when approval and standalone remarks button

--- a/compliance/templates/partials/task_delay_reason.html
+++ b/compliance/templates/partials/task_delay_reason.html
@@ -4,7 +4,7 @@
     <div class="col-lg-12 mb-4">
         <div class="card mb-4 shadow-sm">
             <div class="card-header bg-danger text-white">
-                <h5 class="mb-0">Reason for delay</h5>
+                <h5 class="mb-0">Reason For Delay</h5>
             </div>
             <div class="card-body">
                 <p class="mb-1 text-word-wrap">{{ task.reason_for_delay }}</p>
