--- a/compliance/templates/task_detail.html
+++ b/compliance/templates/task_detail.html
@@ -13,21 +13,23 @@
                 <i class="bi bi-pencil-square"></i> Edit Task
             </a>
             {% endif %}
+            {% if task.current_status != "submitted" %}
+            <button type="button" class="btn btn-info me-2" data-bs-toggle="modal" data-bs-target="#remarksModal">
+                <i class="bi bi-chat-left-text"></i> Add remarks
+            </button>
+            {% endif %}
             {% if can_mark_as_pending %}
-            <form method="post" action="{% url 'task_approve' task.pk %}">
-                {% csrf_token %}
 
-                <button type="submit" class="btn btn-success me-2" onclick="return confirm('Approve this task?');">
-                    Approve
-                </button>
-            </form>
+            <button type="button" class="btn btn-success me-2" data-bs-toggle="modal" data-bs-target="#approvalModal">
+                <i class="bi bi-check-circle"></i> Approve
+            </button>
             <button type="button" class="btn btn-danger me-2" data-bs-toggle="modal" data-bs-target="#revisionModal">
-                <i class="bi bi-pencil-square"></i> Revision required
+                <i class="bi bi-arrow-counterclockwise"></i> Revision required
             </button>
             {% endif %}
             {% if can_request_revision %}
             <button type="button" class="btn btn-danger me-2" data-bs-toggle="modal" data-bs-target="#revisionModal">
-                <i class="bi bi-pencil-square"></i> Revision required
+                <i class="bi bi-arrow-counterclockwise"></i> Revision required
             </button>
             {% endif %}
 
@@ -38,8 +40,26 @@
     </div>
 </div>
 
-{% if can_mark_as_pending or can_request_revision %}
-{% include "partials/revision_remarks_modal_form.html" %}
+{% url 'task_approve' task.pk as approval_action %}
+{% with modal_id="approvalModal" title="Add approval remarks" form=approval_form form_action=approval_action %}
+{% include "partials/remarks_modal_form.html" %}
+{% endwith %}
+
+{% if can_mark_as_pending %}
+{% url 'task_pending' task.pk as revision_action %}
+{% elif can_request_revision %}
+{% url 'task_revise' task.pk as revision_action %}
+{% endif %}
+
+{% with modal_id="revisionModal" title="Revision Required" form=revision_form form_action=revision_action %}
+{% include "partials/remarks_modal_form.html" %}
+{% endwith %}
+
+{% if task.current_status != "submitted" %}
+{% url 'task_remarks' task.pk as remarks_action %}
+{% with modal_id="remarksModal" title="Add remarks" form=remarks_form form_action=remarks_action %}
+{% include "partials/remarks_modal_form.html" %}
+{% endwith %}
 {% endif %}
 
 {% endblock content %}
