--- a/accounts/templates/user_generic.html
+++ b/accounts/templates/user_generic.html
@@ -14,6 +14,7 @@
     {% bootstrap_css %}
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'DataTables/datatables.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'bootstrap-icons-1.13.1/bootstrap-icons.min.css' %}" />
     <style>
         body {
             zoom: 90%;
