--- a/compliance/templates/template_detail.html
+++ b/compliance/templates/template_detail.html
@@ -218,7 +218,7 @@
 
     <!-- Footer Actions -->
     <div class="text-end">
-        {% if request.user.is_authenticated and request.user.user_type in "admin" %}
+        {% if request.user.is_authenticated and perms.compliance.change_template %}
         <a href="{% url 'template_edit' template.pk %}" class="btn btn-warning me-2">
             <i class="bi bi-pencil-square"></i> Edit Template
         </a>
