Accounts: Remove user type from user models

--- a/accounts/templates/accounts/user_detail.html
+++ b/accounts/templates/accounts/user_detail.html
@@ -21,9 +21,15 @@
                     </div>
 
                     <div class="row mb-3">
-                        <div class="col-md-4 fw-bold">User Type</div>
+                        <div class="col-md-4 fw-bold">User Group</div>
                         <div class="col-md-8">
-                            {{ object.get_user_type_display|default:"Not Assigned" }}
+                            {% if object.groups.all %}
+                            {% for group in object.groups.all %}
+                            {{ group.name }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                            {% else %}
+                            Not Assigned
+                            {% endif %}
                         </div>
                     </div>
 
@@ -55,9 +61,11 @@
                         <i class="bi bi-list"></i>Back to List
                     </a>
 
+                    {% if perms.accounts.change_customuser %}
                     <a href="{% url 'user_update' object.pk %}" class="btn btn-primary">
                         <i class="bi bi-pencil-square"></i> Edit User
                     </a>
+                    {% endif %}
                 </div>
 
             </div>
